# Credit-Quant-Research

./: README.md
bayesian-credit-updating/: LICENSE  README.md  pyproject.toml  requirements.txt
bayesian-credit-updating/paper/: paper.tex  references.bib
bayesian-credit-updating/scripts/: run_demo.py
bayesian-credit-updating/src/bcu/: __init__.py  backtest.py  bayesian_model.py  data.py  likelihood.py  priors.py  updating.py
bayesian-credit-updating/tests/: test_data.py  test_priors.py  test_updating.py
convertible-bond-pricer/: README.md  pyproject.toml
convertible-bond-pricer/paper/: main.tex
convertible-bond-pricer/scripts/: run_analysis.py
convertible-bond-pricer/src/: models.py  plots.py  synthetic_data.py
convertible-bond-pricer/tests/: test_models.py
