[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-credit-updating"
version = "0.1.0"
description = "Conditional credit pricing as Bayesian default updating, with correlation-aware signal combination."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paolo Mastrogiacomo" }]
keywords = ["credit-risk", "bayesian", "default-probability", "fixed-income", "relative-value"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
bayes = ["pymc>=5.10", "arviz>=0.17"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
