[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "convertible-bond-pricer"
version         = "0.1.0"
description     = "Convertible bond pricing: Tsiveriotis-Fernandes vs Black-Scholes, with regime analysis."
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
select      = ["E", "F", "W"]
